Bug 380186 - Crashes as soon as chrome opens
Summary: Crashes as soon as chrome opens
Status: RESOLVED FIXED
Alias: None
Product: plasma-browser-integration
Classification: Plasma
Component: Chrome (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Kai Uwe Broulik
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-05-25 13:21 UTC by Aleix Pol
Modified: 2017-06-08 09:29 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aleix Pol 2017-05-25 13:21:33 UTC
Here's a backtrace:
Core was generated by `/home/apol/devel/kde5/bin/plasma-browser-integration-host chrome-extension://ci'.
Program terminated with signal SIGABRT, Aborted.
#0  0x00007f1a5f47ea10 in raise () from /usr/lib/libc.so.6
[Current thread is 1 (Thread 0x7f1a624ea840 (LWP 9548))]
(gdb) where
#0  0x00007f1a5f47ea10 in raise () from /usr/lib/libc.so.6
#1  0x00007f1a5f48013a in abort () from /usr/lib/libc.so.6
#2  0x00007f1a60135f3e in qt_message_fatal (context=..., message=<synthetic pointer>...) at /home/apol/devel/frameworks/qt5/qtbase/src/corelib/global/qlogging.cpp:1690
#3  QMessageLogger::fatal (this=this@entry=0x7ffca2b6daa0, msg=msg@entry=0x7f1a60415498 "ASSERT: \"%s\" in file %s, line %d")
    at /home/apol/devel/frameworks/qt5/qtbase/src/corelib/global/qlogging.cpp:796
#4  0x00007f1a6013169e in qt_assert (assertion=<optimized out>, file=<optimized out>, line=<optimized out>) at /home/apol/devel/frameworks/qt5/qtbase/src/corelib/global/qglobal.cpp:3044
#5  0x00000000004101e1 in WindowMapper::handleData (this=0x642910 <WindowMapper::self()::s_self>, event=..., data=...)
    at /home/apol/devel/frameworks/plasma-browser-integration/host/windowmapper.cpp:142
#6  0x000000000040aeb1 in main::$_2::operator() (this=0x15bf9a0, json=...) at /home/apol/devel/frameworks/plasma-browser-integration/host/main.cpp:95
#7  0x000000000040abd1 in QtPrivate::FunctorCall<QtPrivate::IndexesList<0>, QtPrivate::List<QJsonObject const&>, void, main::$_2>::call (f=..., arg=0x7ffca2b6dfd0)
    at /home/apol/devel/kde5/include/QtCore/qobjectdefs_impl.h:130
#8  0x000000000040aba1 in QtPrivate::Functor<main::$_2, 1>::call<QtPrivate::List<QJsonObject const&>, void> (f=..., arg=0x7ffca2b6dfd0)
    at /home/apol/devel/kde5/include/QtCore/qobjectdefs_impl.h:242
#9  0x000000000040ab2d in QtPrivate::QFunctorSlotObject<main::$_2, 1, QtPrivate::List<QJsonObject const&>, void>::impl (which=1, this_=0x15bf990, r=0x15bdf00, a=0x7ffca2b6dfd0, ret=0x0)
    at /home/apol/devel/kde5/include/QtCore/qobject_impl.h:168
#10 0x00007f1a6034280b in QtPrivate::QSlotObjectBase::call (a=0x7ffca2b6dfd0, r=0x15bdf00, this=<optimized out>)
    at ../../include/QtCore/../../../../../devel/frameworks/qt5/qtbase/src/corelib/kernel/qobject_impl.h:101
#11 QMetaObject::activate (sender=0x15bdf00, signalOffset=<optimized out>, local_signal_index=<optimized out>, argv=<optimized out>)
    at /home/apol/devel/frameworks/qt5/qtbase/src/corelib/kernel/qobject.cpp:3749
#12 0x000000000042b0dc in Connection::dataReceived (this=0x15bdf00, _t1=...) at host/plasma-browser-integration-host_autogen/EWIEGA46WW/moc_connection.cpp:128
#13 0x000000000040d004 in Connection::readData (this=0x15bdf00) at /home/apol/devel/frameworks/plasma-browser-integration/host/connection.cpp:56
#14 0x000000000040d79e in QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (Connection::*)()>::call(void (Connection::*)(), Connection*, void**) (
    f=(void (Connection::*)(Connection * const)) 0x40cf10 <Connection::readData()>, o=0x15bdf00, arg=0x7ffca2b6e2a0) at /home/apol/devel/kde5/include/QtCore/qobjectdefs_impl.h:136
#15 0x000000000040d713 in QtPrivate::FunctionPointer<void (Connection::*)()>::call<QtPrivate::List<>, void>(void (Connection::*)(), Connection*, void**) (
    f=(void (Connection::*)(Connection * const)) 0x40cf10 <Connection::readData()>, o=0x15bdf00, arg=0x7ffca2b6e2a0) at /home/apol/devel/kde5/include/QtCore/qobjectdefs_impl.h:169
#16 0x000000000040d636 in QtPrivate::QSlotObject<void (Connection::*)(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) (which=1, 
    this_=0x15c5910, r=0x15bdf00, a=0x7ffca2b6e2a0, ret=0x0) at /home/apol/devel/kde5/include/QtCore/qobject_impl.h:120
#17 0x00007f1a6034280b in QtPrivate::QSlotObjectBase::call (a=0x7ffca2b6e2a0, r=0x15bdf00, this=<optimized out>)
    at ../../include/QtCore/../../../../../devel/frameworks/qt5/qtbase/src/corelib/kernel/qobject_impl.h:101
Comment 1 Kai Uwe Broulik 2017-06-08 09:29:26 UTC
Git commit 210720805517f2ca74b8795a3ae6b00149e6887a by Kai Uwe Broulik.
Committed on 08/06/2017 at 09:29.
Pushed by broulik into branch 'master'.

Don't assert that we don't know a window that got added

It can happen that we get told a window was added that we already know.
Just bail out in this case.

Reviewed-By: apol

M  +5    -1    host/windowmapper.cpp

https://commits.kde.org/plasma-browser-integration/210720805517f2ca74b8795a3ae6b00149e6887a