Don't assert that we don't know a window that got added

It can happen that we get told a window was added that we already know.
Just bail out in this case.

Reviewed-By: apol
BUG: 380186